force-app/main/default/objects/ppmail__UnlimailSettings__c/ppmail__UnlimailSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store application-wide settings for Unlimail.</description>
    <label>Unlimail Settings</label>
</CustomObject>