force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__AWS_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ppmail__AWS_Account_ID__c</fullName>
    <description>The 12-digit AWS Account ID used for Amazon SES. Displayed alongside the region in the setup wizard connected state.</description>
    <inlineHelpText>Your 12-digit AWS Account ID (e.g., 123456789012). Stored during setup and displayed in the connected state.</inlineHelpText>
    <label>AWS Account ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>