force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__AWS_Region__c.field-meta.xml
<CustomField>
    <fullName>ppmail__AWS_Region__c</fullName>
    <defaultValue>&apos;us-east-1&apos;</defaultValue>
    <description>The AWS region used for Amazon SES API calls. Determines the SES endpoint URL (e.g., us-east-1 → https://email.us-east-1.amazonaws.com). Updated automatically when AWS credentials are saved via the setup wizard.</description>
    <inlineHelpText>The AWS region where your SES resources are configured (e.g., us-east-1, eu-west-1, ap-southeast-1). This is updated automatically during setup.</inlineHelpText>
    <label>AWS Region</label>
    <length>64</length>
    <type>Text</type>
</CustomField>