force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Configuration_Set_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Configuration_Set_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the SES Configuration Set attached to sends is confirmed to exist in the connected AWS account — either auto-provisioned by AmazonSESWebhookManager.createWebhook() or a manually entered name that passed existence validation. When false, AmazonSESRestExplorer.getConfirmedConfigurationSetName() returns null so a send omits ConfigurationSetName rather than attach a name that may not exist in SES.</description>
    <inlineHelpText>When unchecked, outbound sends omit ConfigurationSetName because the configured (or fallback) name has not been confirmed to exist in SES.</inlineHelpText>
    <label>Configuration Set Confirmed</label>
    <type>Checkbox</type>
</CustomField>