force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Configuration_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Configuration_Set_Name__c</fullName>
    <description>The Amazon SES Configuration Set name used for event tracking. When blank, Unlimail auto-creates a Configuration Set named UnlimailConfigSet-{OrgId}.</description>
    <inlineHelpText>The Amazon SES Configuration Set name used for event tracking. When blank, Unlimail auto-creates a Configuration Set named UnlimailConfigSet-{OrgId}.</inlineHelpText>
    <label>Configuration Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>