force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Custom_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Custom_Site_Name__c</fullName>
    <description>API name of a custom public site to use as the webhook endpoint instead of the auto-created Unlimail Webhooks Endpoint site. When blank, the default auto-created site is used.</description>
    <inlineHelpText>Leave blank to use the auto-created site (Unlimail_Webhooks_Endpoint). Set to the API name of any existing public site to use that site for receiving webhook events.</inlineHelpText>
    <label>Custom Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>