force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Disable_Auto_delete_Completed_Jobs__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Disable_Auto_delete_Completed_Jobs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, completed Beacon Jobs will not be automatically deleted.</description>
    <inlineHelpText>If checked, completed Beacon Jobs will not be automatically deleted.</inlineHelpText>
    <label>Disable Auto-delete Completed Jobs</label>
    <type>Checkbox</type>
</CustomField>