force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Log_Level__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Log_Level__c</fullName>
    <defaultValue>&apos;WARN&apos;</defaultValue>
    <description>The logging level for the Unlimail application. Possible values are DEBUG, INFO, WARN, and ERROR.</description>
    <inlineHelpText>The logging level for the Unlimail application. Possible values are DEBUG, INFO, WARN, and ERROR.</inlineHelpText>
    <label>Log Level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>