force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__Sandbox_Mode__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Sandbox_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the application will be in sandbox mode. In sandbox mode, email sending requests are validated, but emails are not actually delivered. This is useful for testing and development purposes. No events will be generated and no credits will be consumed while in sandbox mode.</description>
    <inlineHelpText>If checked, the application will be in sandbox mode. In sandbox mode, email sending requests are validated, but emails are not actually delivered. This is useful for testing and development purposes. No events will be generated and no credits will be consumed while in sandbox mode.</inlineHelpText>
    <label>Sandbox Mode</label>
    <type>Checkbox</type>
</CustomField>