force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__SNS_Subscription_Pending__c.field-meta.xml
<CustomField>
    <fullName>ppmail__SNS_Subscription_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when SNS SubscriptionConfirmation auto-confirmation fails (e.g. missing sns:ConfirmSubscription permission). Displayed in the Setup Wizard so the admin knows to confirm the subscription from the AWS Console.</description>
    <inlineHelpText>When checked, the SNS subscription needs manual confirmation from the AWS Console.</inlineHelpText>
    <label>SNS Subscription Pending</label>
    <type>Checkbox</type>
</CustomField>