force-app/main/default/objects/ppmail__UnlimailSettings__c/fields/ppmail__SNS_Topic_ARN__c.field-meta.xml
<CustomField>
    <fullName>ppmail__SNS_Topic_ARN__c</fullName>
    <description>The Amazon SNS Topic ARN used for Amazon SES event notifications (webhooks). Required to receive delivery, bounce, and engagement events from Amazon SES. Format: arn:aws:sns:&lt;region&gt;:&lt;account-id&gt;:&lt;topic-name&gt;</description>
    <inlineHelpText>The Amazon SNS Topic ARN used for Amazon SES event notifications (webhooks). Required to receive delivery, bounce, and engagement events from Amazon SES.</inlineHelpText>
    <label>SNS Topic ARN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>